crates/math-core/tests/snapshots/conversion_test__nested_transform.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathit{\\mathbf{a}b}"
---
<math>
    <mrow>
        <mi>𝐚</mi>
        <mi>𝑏</mi>
    </mrow>
</math>
