crates/math-core/tests/snapshots/conversion_test__newline.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\\\y"
---
<math>
    <mi>x</mi>
    <mrow></mrow>
    <mi>y</mi>
</math>
