crates/math-core/tests/snapshots/conversion_test__newline_as_arg.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\frac\\\\ab"
---
<math>
    <mfrac>
        <mrow></mrow>
        <mi>a</mi>
    </mfrac>
    <mi>b</mi>
</math>
