crates/math-core/tests/snapshots/conversion_test__newline_at_group_end.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{x\\\\}"
---
<math>
    <mi>x</mi>
</math>
