crates/math-core/tests/snapshots/conversion_test__newline_before_binary_op.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a\\\\-b"
---
<math>
    <mi>a</mi>
    <mo>−</mo>
    <mi>b</mi>
</math>
