crates/math-core/tests/snapshots/conversion_test__not_equal.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\not="
---
<math>
    <mo lspace="0" rspace="0">≠</mo>
</math>
