crates/math-core/tests/snapshots/conversion_test__not_exists.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\not\\exists"
---
<math>
    <mo>∄</mo>
</math>
