crates/math-core/tests/snapshots/conversion_test__not_less_than.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\not\\lt"
---
<math>
    <mo lspace="0" rspace="0">≮</mo>
</math>
